# aigo-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-build.yml
.streamlit/: config.toml
app/: __init__.py  config.py  main.py  settings.py
app/api/: __init__.py  health.py  legacy.py
app/api/v1/: chat.py  embed.py  pdf.py  router.py  schemas.py  sse.py
app/clients/: __init__.py  api.py  collector.py
app/core/: auth.py  logging.py
app/graph/: __init__.py  pipeline.py
app/graph/nodes/: check_relevance.py  check_relevance_ara.ipynb  check_sensitive_info.py  expression_revision.py  formatter.py  generation+formatting.ipynb  generator.py  intent_understanding.py  query_summary.py  resolve_citations.py  retrieve.py  understand_query.py
app/ingest/: __init__.py  indexer.py  loaders.py
app/llm/: __init__.py  client.py
app/pdf_graph/: pipeline.py  state.py
app/pdf_graph/nodes/: check_pdf.py  digital_to_text.py  extracting_special_terms.py  masking_text.py  scan_to_text.py
app/services/: chat_service.py  contract_extraction_service.py  contract_index_service.py  ocr_service.py  special_terms_service.py  summarize_service.py
app/vectordb/: __init__.py  embedder.py  store.py
data/raw/: expc.jsonl  expc_for_embedding.jsonl
docs/: api.md  git_strategy.md  privacy_policy.md  prompt_strategy.md  vectordb_usage.md
notebooks/: RAG_pipeline_test_scenario.ipynb  collect_eflaw.ipynb  collect_raw.ipynb  collect_raw_expc.ipynb  collect_raw_prec.ipynb  langgraph_integration.ipynb
scripts/: build_vectorstore.py  sync_data.py
src/: config.py
src/api/: api.py
src/graph/: __init__.py  pipeline.py  state.py
src/graph/nodes/: check_relevance.py  check_relevance_ara.ipynb  check_sensitive_info.py  expression_revision.py  formatter.py  generator.py  intent_understanding.py  resolve_citations.py  retrieve.py
src/ingest/: __init__.py  chunker.py  indexer.py  loaders.py
src/llm/: __init__.py  client.py
src/pdf_graph/: pipeline.py  state.py
src/pdf_graph/nodes/: check_pdf.py  digital_to_text.py  extracting_special_terms.py  masking_text.py  scan_to_text.py
src/ui/: app.py  session.py  styles.py
src/ui/components/: chat.py  consent.py  sidebar.py  uploader.py
src/vectordb/: store.py
tests/: conftest.py  embedding_model_evaluation.ipynb
tests/unit/: test_auth.py  test_chat_stream.py  test_contract_extraction_service.py  test_contract_index_service.py  test_embed.py  test_error_handlers.py  test_health.py  test_ocr_service.py  test_pdf_analyze.py  test_qdrant_store.py  test_special_terms_service.py  test_sse.py  test_summarize_service.py
