[project]
name = "09-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]

# 의존성 관리
# - uv 사용자: `uv sync`
# - pip 사용자: `pip install -r requirements.txt`
# requirements.txt는 `uv export --no-hashes --no-annotate -o requirements.txt`로 생성됨
# 새 패키지 추가 후 반드시 requirements.txt를 재생성할 것

