[project]
name = "aigo-ai"
version = "0.1.0"
description = "Aigo Youth FastAPI 기반 법률 RAG 챗봇 백엔드"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-tavily>=0.2.17",
    "langgraph>=0.4.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "psutil>=7.2.2",
    "pypdf>=5.0.0",
    "pymupdf>=1.24.0",
    "paddleocr>=2.10.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.7,<2.8",
    "torchvision>=0.22,<0.23",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "structlog>=25.5.0",
    "python-multipart>=0.0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# 의존성 관리: `uv sync` (lock 갱신은 `uv lock`)

